--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,19 @@
+html{
+    scroll-behaviour: smooth !important ;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.featureSection::after {
+    -webkit-box-shadow: 0px 0px 100px 100px #66BEE3;
+    -moz-box-shadow: 0px 0px 100px 100px #66BEE3;
+    box-shadow: 0px 0px 100px 100px #66BEE3;
+}
+.featureSection::before {
+    z-index: 10;
+    -webkit-box-shadow: 0px 0px 50px 30px white;
+    -moz-box-shadow: 0px 0px 50px 30px white;
+    box-shadow: 0px 0px 50px 30px white;
+}
