footer sec seprate contact us added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,10 @@
       margin: 0;
     }
   }
+
+  input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.064) inset !important;
+}
