Created:Chat page and necessary component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,3 +77,7 @@ html {
   content: "";
   @apply w-3/5 h-2 absolute left-1/2 -translate-x-1/2 bottom-[-4px] rounded-[100%] rdlGrdnt;
 }
+
+.friends::-webkit-scrollbar {
+  width: 5px;
+}
