size fix of profile photoes in gallery section

--- a/client/src/Components/GallerySection/Slider.css
+++ b/client/src/Components/GallerySection/Slider.css
@@ -3,7 +3,8 @@
 }
 
 .slider-track{
-    width: calc(250px * 20);
+    width: fit-content;
+    /* width: calc(250px * 20); */
     animation: scroll 100s linear infinite;
 }
 
